# hiroz

./: .dockerignore  .gitignore  .whippet-cmd.sh  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  cliff.toml  flake.nix  mkdocs.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  compose-interop.yml  docs-links.yml  docs.yml  mkdocs-preview.yml  pr-draft-check.yml  release.yml  rmw-zenoh-rs.yml  test.yml
bindings/python/: index.html
compose/: README.md  docker-compose.yml
compose/docker/: Dockerfile.hiroz  Dockerfile.ros2
compose/gates/: 01_topics.sh  02_services.sh  03_parameters.sh  04_actions_graph.sh  lib.sh  run_gates.sh
core-concepts/actions-advanced/: index.html
crates/hiroz/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/hiroz-bridge/: Cargo.toml
crates/hiroz-bridge/src/: bridge.rs  cli.rs  discovery.rs  forwarder.rs  hash_registry.rs  ke.rs  lib.rs  limits.rs  main.rs  status.rs
crates/hiroz-bridge/src/dds/: bridge.rs  config.rs  discovery.rs  ext.rs  mod.rs  names.rs  participant.rs  pubsub.rs  qos.rs  ros_discovery.rs  service.rs
crates/hiroz-bridge/src/dds/cyclors/: discovery.rs  entity.rs  participant.rs  qos.rs  reader.rs  writer.rs
crates/hiroz-bridge/src/distro/: bridge.rs  discovery.rs  forwarder.rs  hash_registry.rs  mod.rs
crates/hiroz-cdr/: Cargo.toml  README.md
crates/hiroz-cdr/src/: deserializer.rs  lib.rs  traits.rs
crates/hiroz-cdr/tests/: cdr_tests.rs
crates/hiroz-codegen/: Cargo.toml  README.md
crates/hiroz-codegen-go/: generator.go  go.mod  main.go  main_test.go
crates/hiroz-codegen/src/: hashing.rs  lib.rs  protobuf_generator.rs  (+3 more)
crates/hiroz-console/: Cargo.toml  README.md
crates/hiroz-derive/: Cargo.toml  README.md
crates/hiroz-derive/src/: lib.rs
crates/hiroz-go/: README.md  go.mod  justfile
crates/hiroz-meter/: Cargo.toml
crates/hiroz-meter/src/: action.rs  bw.rs  context.rs  delay.rs  echo.rs  hz.rs  info.rs  list.rs  main.rs  manifest.rs  param.rs  pub.rs  qos_warn.rs  service.rs
crates/hiroz-monitor/: Cargo.toml
crates/hiroz-msgs/: Cargo.toml  README.md  build.rs
crates/hiroz-protocol/: Cargo.toml
crates/hiroz-py/: Cargo.toml  README.md  pyproject.toml
crates/hiroz-schema/: Cargo.toml
crates/hiroz-tests/: Cargo.toml  README.md  build.rs
crates/hiroz-tests/tests/: action_interop.rs  bridge_interop.rs  cache.rs  dds_interop.rs  demo_nodes.rs  dynamic_message.rs  hu_meter.rs  hu_monitor.rs  humble_jazzy_bridge.rs  hz_accuracy.rs  lifecycle.rs  parameter_interop.rs  parameter_tests.rs  protobuf_pubsub.rs  protobuf_service.rs  pubsub_interop.rs  python_interop.rs  service_backend.rs.disabled  service_interop.rs  shm_example.rs  type_description_integration.rs  type_description_interop.rs  z_cache_example.rs  z_custom_message_example.rs  z_pingpong_example.rs  z_srvcli_example.rs  zenoh_compat.rs
crates/hiroz-tests/tests/common/: mod.rs
crates/hiroz-union/: Cargo.toml
crates/hiroz-union/plugins/hu-meter/: Cargo.toml
crates/hiroz-union/plugins/hu-meter/src/: lib.rs
crates/hiroz-union/plugins/hu-meter/wit/: hu-plugin.wit
crates/hiroz-union/plugins/hu-monitor/: Cargo.toml
crates/hiroz-union/plugins/hu-monitor/src/: lib.rs
crates/hiroz-union/plugins/hu-monitor/wit/: hu-plugin.wit
crates/hiroz-union/src/: export.rs  main.rs
crates/hiroz-union/src/app/: input.rs  mod.rs  monitor.rs  plugins.rs  recorder.rs  state.rs
crates/hiroz-union/src/app/render/: measure.rs  mod.rs  plugins.rs  topics.rs
crates/hiroz-union/src/core/: engine.rs  logger.rs  message_formatter.rs
crates/hiroz-union/src/modes/: cli.rs  headless.rs  mod.rs  web.rs
crates/hiroz-union/src/plugin/: abi.rs  mod.rs  wasm.rs
crates/hiroz-union/src/plugin/wasm/: mod.rs  state.rs
crates/hiroz-union/src/plugin/wasm/host/: graph.rs  mod.rs  render.rs  ros.rs  transport.rs
crates/hiroz-union/tests/: headless_test.rs
crates/hiroz-union/tests/common/: mod.rs
crates/hiroz-union/wit/: hu-plugin.wit
crates/hiroz/examples/custom_msgs_demo/: Cargo.toml  README.md  build.rs
crates/hiroz/examples/custom_msgs_demo/src/: lib.rs
crates/hiroz/examples/protobuf_demo/: Cargo.toml  README.md
crates/hiroz/examples/protobuf_demo/proto/: sensor_data.proto
crates/hiroz/examples/protobuf_demo/src/: demo.rs  lib.rs  types.rs
crates/hu-meter/: Cargo.toml
crates/rmw-zenoh-rs/: Cargo.toml  README.md
docs/bindings/: go-quick-start.md  go.md  python-codegen.md  python-quick-start.md  python.md
docs/core-concepts/: actions-advanced.md  actions.md  lifecycle.md  message-cache.md  parameters.md  pubsub.md  services.md
docs/experimental/: keyexpr-formats.md  rmw-zenoh-rs.md  shm.md
docs/getting-started/: building.md  distro-compatibility.md  nix.md  quick-start.md
docs/reference/: feature-comparison.md  feature-flags.md  ros2-to-hiroz.md  troubleshooting.md
docs/stylesheets/: home.css
docs/tools/: console.md  hu-plugins.md  hu-vs-ros2cli.md  hu.md  why-hu.md
docs/user-guide/: bridge.md  config-advanced.md  config-options.md  custom-messages.md  examples.md  interop.md  message-generation.md  networking.md  protobuf.md
examples/wasm-plugins/hu-meter/: Cargo.toml  README.md
examples/wasm-plugins/hu-meter/src/: lib.rs
getting-started/building/: index.html
getting-started/distro-compatibility/: index.html
getting-started/quick-start/: index.html
nix/: pre-commit.nix
overrides/: home.html
pr-preview/pr-186/: sitemap.xml
pr-preview/pr-219/: index.html
reference/feature-flags/: index.html
scripts/: README.md  build-python-wheels.nu  check-doc-build.nu  check-example-coverage.nu  check-local.nu  check-local.sh  extract-help.nu  generate-dependencies-json.nu  populate-cache.nu  test-go.nu  test-pure-rust.nu  test-python.nu  test-release-workflow.nu  test-ros-packages.nu  test-ros.nu  update-vendored-assets.nu
scripts/ci/: bridge-tests.sh  cyclone-hz-check.sh  hu-tests.sh  hz-tests.sh
scripts/lib/: common.nu
scripts/optional/: check-example-coverage.nu  run-all-tests.nu
search/: search_index.json
user-guide/bridge/: index.html
user-guide/interop/: index.html
(+271 files in other folders)
