[package]
name = "hiroz-bridge"
version = "0.1.0"
edition = "2024"
description = "hu-bridge — cross-distro and cross-DDS bridge plugin for hu"
homepage = "https://github.com/ZettaScaleLabs/hiroz"
publish = false

[lib]
name = "hiroz_bridge"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "hu-bridge"
path = "src/main.rs"

[features]
default = ["cross-distro"]
cross-distro = []
cross-dds = ["dep:cyclors", "dep:zenoh-ext"]
free-tier = []

[dependencies]
hiroz = { path = "../hiroz" }
hiroz-protocol = { path = "../hiroz-protocol", features = ["std", "rmw-zenoh"] }
hiroz-msgs = { path = "../hiroz-msgs", default-features = false, features = [
  "core_msgs",
  "jazzy",
] }

zenoh = { workspace = true }
zenoh-ext = { workspace = true, optional = true }

tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = { workspace = true }
cyclors = { version = "=0.3.10", optional = true }
flume = { workspace = true }
cdr = "0.2"
regex = "1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
dirs-next = "2.0"
