[package]
name = "hiroz-meter"
version = "0.1.0"
edition = "2024"
description = "hu-meter — rate, bandwidth, echo, pub, service, and param commands for hiroz"
homepage = "https://github.com/ZettaScaleLabs/hiroz"
publish = false

[[bin]]
name = "hu-meter"
path = "src/main.rs"

[dependencies]
hiroz = { path = "../hiroz" }
hiroz-protocol = { path = "../hiroz-protocol", features = ["std"] }
hiroz-msgs = { path = "../hiroz-msgs" }
zenoh = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = { workspace = true }
chrono = { version = "0.4" }
