[package]
name = "hiroz-union"
version = "0.1.0"
edition = "2024"
description = "hu — plugin platform and TUI for the hiroz ROS 2 ecosystem"
homepage = "https://github.com/ZettaScaleLabs/hiroz"
publish = false

[[bin]]
name = "hu"
path = "src/main.rs"

[dependencies]
hiroz = { path = "../hiroz" }
hiroz-msgs = { path = "../hiroz-msgs" }
hiroz-protocol = { path = "../hiroz-protocol" }
clap = { workspace = true }
crossterm = "0.29"
flume = { workspace = true }
parking_lot = { workspace = true }
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
zenoh = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
anyhow = { workspace = true }
which = "7"
libloading = "0.8"
